# scikgextract

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/: README.md
data/examples/: README.md
data/gold-standard-annotations/: README.md
data/gold-standard-datasets/: README.md
data/models/: README.md
data/research-papers/: README.md
data/resources/: PubChem-Synonym-CID.json  README.md  pubchem_cid_representations.json
data/schemas/: README.md
notebooks/: 01_SciKG_Extract_example_usage.ipynb  01_ZnO_and_IGZO_data_analysis.ipynb  02_ZnO_and_IGZO_data_analysis.ipynb  02_ZnO_and_IGZO_quantitative_evaluations.ipynb  03_ZnO_and_IGZO_quantitative_evaluations.ipynb  README.md
notebooks/analysis/: 01_ZnO_and_IGZO_data_analysis.ipynb  02_ZnO_IGZO_normalization_analysis.ipynb  gold_standard_datasets_analysis.ipynb  zno_igzo_data_analysis.ipynb  zno_igzo_normalization_analysis.ipynb
notebooks/evaluation/: 01_ZnO_and_IGZO_quantitative_evaluations.ipynb
notebooks/tutorials/: 01_SciKGExtract_Knowledge_Extraction.ipynb  02_SciKGExtract_Knowledge_Extraction_Normalization.ipynb  03_SciKGExtract_Knowledge_Extraction_Normalization_Reflection.ipynb  04_SciKGExtract_Knowledge_Extraction_Normalization_Refinement.ipynb
scikg_extract/agents/: extraction_agent.py  feedback_agent.py  orchestrator_agent.py  reflection_agent.py  reflection_debate.py  reflection_multi_judge.py  states.py
scikg_extract/callbacks/: timing_callback.py
scikg_extract/config/: envConfig.py  (+2 more)
scripts/: README.md
(+24455 files in other folders)
